finally fixed 'garbage collection' so dust motes clean up after themselves and don't leave their 100s of divs behind. Limited number of dustmotes that can appear at once. fixed some of the ending animations

--- a/postal.css
+++ b/postal.css
@@ -45,6 +45,7 @@ p {
 	z-index: -1;
 	background-size: 100%;
 	background-repeat: no-repeat;
+	background-position: center;
 }
 
 @media (min-width: 800px) {
